--- a/netlify.toml
+++ b/netlify.toml
@@ -1,7 +1,3 @@
 [build]
-  base = "my-app/"
-  publish = "my-app/build/"
-  functions = "my-app/backend/"
   command = "npm run build"
-  
-
+  publish = "build"
